New in v0.13.4 (??????????)
---------------------------

Regressing and restoring should now take less memory when processing
large directories.


New in v0.13.3 (2003/10/14)
---------------------------

Fixed some of the --restrict options which would cause spurious
violation errors.

--list-changed-since and --list-at-time now work remotely.
Thanks to Morten Werner Olsen for bug report.

Fixed logic bug that could make restoring extremely slow and waste
memory.  Thanks for Jacques Botha for report.

Fixed bug restoring some directories when mirror_metadata file was
missing (as when made by 0.10.x version).

Regressing and restoring as non-root user now works on directories
that contain unreadable files and directories as long as they are
owned by that user.  Bug report by Arkadiusz Miskiewicz.  Hopefully
this is the last of the unreadable file bugs...

Rewrote hard link tracking system.  New way should use less memory.

Fixed bug causing rdiff-backup to crash when backing up from system
supporting EAs/ACLs to one that didn't.


New in v0.13.2 (2003/09/16)
---------------------------

Change ownership policy and added --user-mapping-file and
--group-mapping-file switches.  See man page for more information.

Added option --never-drop-acls to cause fatal error instead of
dropping any acls or acl entries.  Thanks to Greg Freemyer for
suggestion.

Specified socket type as SOCK_STREAM.  (Error reported by Erik
Forsberg.)

Fixed bug backing up unreadable regular files and directories when
rdiff-backup is run by root on the source site and non-root on the
destination side.  (Reported by Troels Arvin and Arkadiusz
Miskiewicz.)

If there is data missing from the destination dir (for instance if a
user mistakenly deletes it), only warn when restoring, instead of
exiting with error.

Fixed bug in EA/ACL restoring, noticed by Greg Freemyer.

Updated quoting of filenames and extended attributes names to match
forthcoming attr/facl utilities.  Strange characters should now be